Very old fashion way to call a listener action

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MoviesDevExpert</string>
+    <string name="button_toast">button</string>
+    <string name="hint_edit_text">hint</string>
 </resources>
